--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,7 +48,7 @@ a {
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 50px;
+    padding-top: 28px;
 }
 
 .navbar ul {
@@ -79,4 +79,44 @@ a {
 .navbar .action-btn {
     padding: 13px 16px;
     margin-left: 18px;
+}
+
+/* Hero */
+.hero {
+    margin-top: 140px;
+}
+
+.hero .info {
+    width: 51%;
+}
+.hero .sub-title {
+    color: #687690;
+    font-size: 1.8rem;
+    /* line-height: 27px; */
+    line-height: 1.5;
+    letter-spacing: 0.01em;
+}
+
+.hero .title {
+    margin-top: 8px;
+    color: #000336;
+    font-size: 6.2rem;
+    font-weight: 700;
+    /* line-height: 76px; 118.75% */
+    line-height: 1.19;
+}
+
+.hero .desc {
+    display: inline-block;
+    color: #5a6473;
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px; /* 177.778% */
+    margin-top: 30px;
+}
+
+.hero-cta {
+    min-width: 170px;
+    margin-top: 40px;
 }
