--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,10 +39,11 @@ a {
     opacity: 0.9;
 }
 
-/* header */
+/* ======== header =========*/
 .header {
     background-color: #e6f0ff;
     height: 100vh;
+    position: relative;
 }
 
 .navbar {
@@ -119,4 +120,10 @@ a {
 .hero-cta {
     min-width: 170px;
     margin-top: 40px;
+}
+
+.hero-house {
+    position: absolute;
+    right: calc((100vw - 1110px) / 2 - 100px);
+    bottom: 0;
 }
