--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -241,7 +241,63 @@ header {
 /* ======== Featured =========*/
 
 .featured {
-    margin-top: 230px;
+    margin-top: 120px;
+    padding: 110px 0;
+    background: #F5FAFE;
+}
+
+.featured .list {
+    display: flex;
+    gap: 30px;
+    margin-top: 70px;
+}
+
+.featured .list .item {
+    flex: 1;
+    border-radius: 12px;
+    background: #fff;
+    overflow: hidden;
+}
+
+.featured .list .thumb {
+    width: 100%;
+    height: 227px;
+    object-fit: cover;
+}
+
+.featured .body {
+    padding: 17px 20px 23px;
+}
+
+.featured .body .title {
+    color: #000339;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 1;
+}
+
+.featured .body .desc {
+    margin-top: 17px;
+    color: #A3A6AB;
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.featured .body .info {
+    margin-top: 21px;
+    display: flex;
+    align-items: center;
+}
+
+.featured .body .label {
+    color: #4D4D52;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1;
+    letter-spacing: 0.14px;
+    margin: 0 22px 0 8px;
 }
 
 .featured .row {
