--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -452,21 +452,48 @@ header {
 
 .stats-trend .avatar-block {
     margin-top: 26px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 14px 16px;
 }
 
 .stats-trend .avatar-group {
-    height: 16.337px;
-    display: inline-block;
-    position: relative;
+    display: flex;
 }
 
-.stats-trend .avatar{
-    height: 100%;
-    object-fit: cover;
+.stats-trend .avatar {
     border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    margin-left: -3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 7.261px;
+    font-weight: 450;
+    background-color: var(--bg-color, #fff);
 }
 
-.stats-trend .avatar-group .avatar:nth-child(2) {
-    position: absolute;
-    left: 12px;  
+.stats-trend .avatar:first-child {
+    margin-left: 0;
+}
+
+.row-qty {
+    display: flex;
+    justify-content: space-between  ;
+    margin-top: 120px;
+}
+
+.row-qty .qty {
+    color: #000;
+    font-size: 6.4rem;
+    font-weight: 600;
+}
+
+.row-qty .desc {
+    color: #7B8087;
+    font-size: 1.8rem;
+    font-weight: 500;
+    margin-top: 22px;
 }
