--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,6 +81,20 @@ h2.heading {
     line-height: 1.26;
 }
 
+.line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: var(--line-clamp, 1);
+    -webkit-box-orient: vertical;
+    overflow: hidden;   
+}
+
+.line-clamp.line-2{
+    --line-clamp: 2;
+}
+
+.break-all{
+    word-break: break-all;
+}
 /* ===== header ===== */
 header {
     background-color: #FFFCF4;
