--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -377,7 +377,7 @@ nav .active a::after {
     padding: 16px 22px 22px;
 }
 
-.course-list .title {
+.course-list .title a{
     color: #171100;
     font-size: 1.8rem;
     font-weight: 600;
@@ -547,8 +547,9 @@ nav .active a::after {
 
 /* ===== blog ===== */
 .blog {
-    margin-top: 296px;
-    margin-bottom: 98px;
+    margin-top: 200px;
+    padding: 98px 0;
+    background: #FFFCF4;
 }
 
 .blog .body {
@@ -576,6 +577,12 @@ nav .active a::after {
 .blog-item {
     width: 33.33%;
     max-width: 370px;
+    background: #fff;
+    border-radius: 16px;
+}
+
+.blog-item:hover{
+    box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.15);
 }
 
 .blog-item img {
