--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -175,11 +175,11 @@ a {
     margin-top: 22px;
 }
 
-.hero__row{
+.hero__row {
     margin-top: 38px;
 }
 
-.hero__phone{
+.hero__phone {
     color: #fff;
     font-size: 1.8rem;
     margin-left: 32px;
@@ -190,7 +190,7 @@ a {
     align-items: center;
 }
 
-.hero__img{
+.hero__img {
     border-radius: 6px;
     object-fit: cover;
 }
@@ -205,4 +205,94 @@ a {
 .hero__img:last-child {
     width: 210px;
     height: 410px;
+}
+
+/* ======== hero =========*/
+.service {
+    margin: 170px 0;
+}
+
+.service__heading {
+    color: #10375C;
+    text-align: center;
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 1.2;
+    letter-spacing: -1px;
+}
+
+.service__desc {
+    color: #575F66;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 1.67;
+    margin: 18px auto 0;
+    width: 467px;
+}
+
+.service__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 70px;
+}
+
+.service__img {
+    width: 570px;
+    height: 570px;
+    border-radius: 12px;
+    object-fit: cover;
+}
+
+.service-item__body {
+    margin-left: 20px;
+}
+
+.service__list {
+    margin-bottom: 55px;
+}
+
+.service-item {
+    display: flex;
+    padding: 21px;
+    width: 470px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.service-item:hover {
+    box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
+}
+
+.service-item:hover .service-item__icon {
+    color: #fff;
+    background: #2E80CE;
+}
+
+.service-item__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    flex-shrink: 0;
+    border-radius: 50%;
+    background: #eff6fd;
+    color: #10375C;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.05);
+}
+
+
+
+.service-item__heading {
+    color: #10375C;
+    font-weight: 600;
+}
+
+.service-item__desc {
+    margin-top: 8px;
+    color: #575F66;
+    font-weight: 300;
+    line-height: 1.75;
 }
