--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -424,3 +424,94 @@ a {
     line-height: 1.67;
     padding: 18px 0 32px;
 }
+
+/* ======== member =========*/
+.member__heading {
+    color: #10375C;
+    text-align: center;
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 1.2;
+    letter-spacing: -1px;
+}
+
+.member__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.member__cta {
+    margin-top: 38px;
+}
+
+.member__list {
+    margin-top: 70px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 34px;
+}
+
+.member-item:hover .member-item__img {
+    transform: scale(1.1);
+}
+
+.member-item__img-bg {
+    border-radius: 6px;
+    background: #EAF6FF;
+    cursor: pointer;
+}
+
+.member-item__img {
+    transition: 0.25s;
+    object-fit: cover;
+    width: 262px;
+    height: 290px;
+}
+
+.member-item__name {
+    color: #10375C;
+    text-align: center;
+    line-height: 1.75;
+    margin-top: 12px;
+}
+
+.member-item__title {
+    color: #575F66;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.86;
+}
+
+.member__control {
+    display: flex;
+    justify-content: center;
+    column-gap: 20px;
+    margin-top: 38px;
+}
+
+.member__control-btn {
+    cursor: pointer;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: 1px solid #000;
+    background: #fff;
+    color: #000;
+}
+
+.member__control-btn:last-child {
+    transform: rotate(180deg);
+}
+
+.member__control-btn:hover {
+    color: #fff;
+    border: 1px solid #2E80CE;
+    background: #2E80CE;
+}
+
+/* ======== member =========*/
+.install {
+    margin-top: 170px;
+}
