--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,6 +90,31 @@ a {
     opacity: 0.9;
 }
 
+.control {
+    display: flex;
+    column-gap: 20px;
+}
+
+.control__btn {
+    cursor: pointer;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: 1px solid #000;
+    background: #fff;
+    color: #000;
+}
+
+.control__btn:last-child {
+    transform: rotate(180deg);
+}
+
+.control__btn:hover {
+    color: #fff;
+    border: 1px solid #2E80CE;
+    background: #2E80CE;
+}
+
 /* ======== header =========*/
 
 .header {
@@ -460,12 +485,13 @@ a {
     border-radius: 6px;
     background: #EAF6FF;
     cursor: pointer;
+    overflow: hidden;
 }
 
 .member-item__img {
     transition: 0.25s;
     object-fit: cover;
-    width: 262px;
+    max-width: 100%;
     height: 290px;
 }
 
@@ -485,33 +511,180 @@ a {
 }
 
 .member__control {
-    display: flex;
-    justify-content: center;
-    column-gap: 20px;
     margin-top: 38px;
+    justify-content: center;
 }
 
-.member__control-btn {
-    cursor: pointer;
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    border: 1px solid #000;
-    background: #fff;
-    color: #000;
-}
+/* ======== install =========*/
 
-.member__control-btn:last-child {
-    transform: rotate(180deg);
-}
-
-.member__control-btn:hover {
-    color: #fff;
-    border: 1px solid #2E80CE;
-    background: #2E80CE;
-}
-
-/* ======== member =========*/
 .install {
     margin-top: 170px;
 }
+
+.install__inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #2E80CE;
+}
+
+.install__phone {
+    width: 284px;
+    height: 522px;
+    flex-shrink: 0;
+    margin-top: -95px;
+    margin-left: 70px;
+    display: block;
+}
+
+.install__content {
+    min-width: 586px;
+    margin-left: 160px;
+}
+
+.install__heading {
+    width: 489px;
+    color: #FFF;
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 1.2;
+    letter-spacing: -1px;
+}
+
+.install__desc {
+    margin-top: 18px;
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 1.67;
+}
+
+.install__row {
+    margin-top: 38px;
+}
+
+.install__btn-img {
+    margin-right: 28px;
+}
+
+/* ======== news =========*/
+
+.news {
+    margin: 170px 0;
+}
+
+.news__control {
+    margin-top: 28px;
+}
+
+.news__inner {
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.news__heading {
+    width: 470px;
+    color: #10375C;
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 1.2;
+    letter-spacing: -1px;
+}
+
+.news__more {
+    display: inline-block;
+    color: #10375C;
+    margin-top: 28px;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.56;
+    text-decoration-line: underline;
+}
+
+.news__list {
+    margin-left: auto;
+    display: flex;
+    gap: 30px;
+}
+
+.new-item {
+    width: 270px;
+    border-radius: 12px;
+    border: 1px solid #E8EBEE;
+    background: #FFF;
+}
+
+.news__thumb {
+    width: 100%;
+    height: 172px;
+    border-radius: 12px 12px 0 0;
+    object-fit: cover;
+}
+
+.news-item__body {
+    padding: 0 22px 21px;
+}
+
+.news-item__heading {
+    margin-top: 18px;
+    color: #10375C;
+    font-weight: 600;
+    line-height: 1.62;
+}
+
+.news-item__desc {
+    margin-top: 10px;
+    color: #575F66;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.7;
+}
+
+.news-item__lean-more {
+    margin-top: 12px;
+    color: #10375C;
+    font-size: 14px;
+}
+
+/* ======== appointment =========*/
+
+.appointment__inner {
+    height: 452px;
+    background: #F6FBFF;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.appointment__heading {
+    position: relative;
+    margin-top: 100px;
+    color: #10375C;
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 1.2;
+    letter-spacing: -1px;
+}
+
+.appointment__heading::after {
+    position: absolute;
+    bottom: -18px;
+    right: 50%;
+    transform: translateX(50%);
+    content: "";
+    display: inline-block;
+    width: 136px;
+    height: 2px;
+    background: #2E80CE;
+}
+
+.appointment__desc {
+    color: #575F66;
+    font-weight: 300;
+    line-height: 1.75;
+    width: 617px;
+    margin: 38px 0;
+}
+
+/* ======== footer =========*/
